force-app/main/default/objects/IFv2_RequestExtension1__c/IFv2_RequestExtension1__c.object-meta.xml
<CustomObject>
    <description>Hold the requests of the APAC region</description>
    <label>Request Extension 1 - APAC</label>
    <nameField>
        <label>Request Extension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Extension 1 - APAC</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>