force-app/main/default/objects/IFv2_RequestExtension1__c/fields/AdvantageofProposedMethod__c.field-meta.xml
<CustomField>
    <fullName>AdvantageofProposedMethod__c</fullName>
    <label>Advantage of Proposed Method</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>