force-app/main/default/objects/IFv2_RequestExtension1__c/fields/AmountCNY__c.field-meta.xml
<CustomField>
    <fullName>AmountCNY__c</fullName>
    <description>Used in China MAE Application – Lost</description>
    <label>Amount (CNY)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>