force-app/main/default/objects/IFv2_RequestExtension1__c/fields/ApplicationReason__c.field-meta.xml
<CustomField>
    <fullName>ApplicationReason__c</fullName>
    <description>Used in China Travel Application</description>
    <label>Application Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>