force-app/main/default/objects/IFv2_RequestExtension1__c/fields/AssetCostCenter__c.field-meta.xml
<CustomField>
    <fullName>AssetCostCenter__c</fullName>
    <description>used in China MAE</description>
    <inlineHelpText>Please enter the Asset Cost Center ID</inlineHelpText>
    <label>Asset Cost Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>