force-app/main/default/objects/IFv2_RequestExtension1__c/fields/AssetDescription__c.field-meta.xml
<CustomField>
    <fullName>AssetDescription__c</fullName>
    <label>Asset Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>