force-app/main/default/objects/IFv2_RequestExtension1__c/fields/AssetNo__c.field-meta.xml
<CustomField>
    <fullName>AssetNo__c</fullName>
    <label>Asset No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>