force-app/main/default/objects/IFv2_RequestExtension1__c/fields/AssetTransferInCostCenter__c.field-meta.xml
<CustomField>
    <fullName>AssetTransferInCostCenter__c</fullName>
    <label>Asset Transfer In Cost Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>