force-app/main/default/objects/IFv2_RequestExtension1__c/fields/AssetTransferOutCostCenter__c.field-meta.xml
<CustomField>
    <fullName>AssetTransferOutCostCenter__c</fullName>
    <label>Asset Transfer Out Cost Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>