force-app/main/default/objects/IFv2_RequestExtension1__c/fields/CarrierName__c.field-meta.xml
<CustomField>
    <fullName>CarrierName__c</fullName>
    <label>Carrier Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>