force-app/main/default/objects/IFv2_RequestExtension1__c/fields/ChallanNo__c.field-meta.xml
<CustomField>
    <fullName>ChallanNo__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>Challan No</label>
    <type>AutoNumber</type>
</CustomField>