force-app/main/default/objects/IFv2_RequestExtension1__c/fields/ChargetoAnotherDivisionCompanycode__c.field-meta.xml
<CustomField>
    <fullName>ChargetoAnotherDivisionCompanycode__c</fullName>
    <label>Charge to another division(company code)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>