force-app/main/default/objects/IFv2_RequestExtension1__c/fields/ChargetoCostCenter__c.field-meta.xml
<CustomField>
    <fullName>ChargetoCostCenter__c</fullName>
    <description>Used in China Travel Application</description>
    <label>Charge to Cost Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>