force-app/main/default/objects/IFv2_RequestExtension1__c/fields/ChargetoOthercostcenter__c.field-meta.xml
<CustomField>
    <fullName>ChargetoOthercostcenter__c</fullName>
    <description>Used in China Travel Application</description>
    <label>Charge to other cost center</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>