force-app/main/default/objects/IFv2_RequestExtension1__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Used in China MAE Application – Lost and Scrap.</description>
    <inlineHelpText>This field should be filled by specific Approvers</inlineHelpText>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>