force-app/main/default/objects/IFv2_RequestExtension1__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Used in China Property Gate Pass Application Workflow and China- Combine, Lost, Split.</description>
    <inlineHelpText>Please select the Company location</inlineHelpText>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SGCN</fullName>
            </value>
            <value>
                <fullName>SGCN_Sgh</fullName>
            </value>
            <value>
                <fullName>SGCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>