force-app/main/default/objects/IFv2_RequestExtension1__c/fields/CompensationPerson__c.field-meta.xml
<CustomField>
    <fullName>CompensationPerson__c</fullName>
    <description>Used in China MAE Application – Lost</description>
    <label>Compensation Person</label>
    <length>250</length>
    <type>Text</type>
</CustomField>