force-app/main/default/objects/IFv2_RequestExtension1__c/fields/ContactNumber__c.field-meta.xml
<CustomField>
    <fullName>ContactNumber__c</fullName>
    <description>Contact number</description>
    <inlineHelpText>Enter the contact number</inlineHelpText>
    <label>Contact Number</label>
    <type>Phone</type>
</CustomField>