force-app/main/default/objects/IFv2_RequestExtension1__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <inlineHelpText>Please enter Customer Code in numbers.</inlineHelpText>
    <label>Customer Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>