force-app/main/default/objects/IFv2_RequestExtension1__c/fields/Customer_SGIN__c.field-meta.xml
<CustomField>
    <fullName>Customer_SGIN__c</fullName>
    <label>Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>