force-app/main/default/objects/IFv2_RequestExtension1__c/fields/DateRNagainst__c.field-meta.xml
<CustomField>
    <fullName>DateRNagainst__c</fullName>
    <label>Date / RN against</label>
    <type>Date</type>
</CustomField>