force-app/main/default/objects/IFv2_RequestExtension1__c/fields/Deductions_in_INR__c.field-meta.xml
<CustomField>
    <fullName>Deductions_in_INR__c</fullName>
    <label>Deductions (in INR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>