force-app/main/default/objects/IFv2_RequestExtension1__c/fields/DriverName__c.field-meta.xml
<CustomField>
    <fullName>DriverName__c</fullName>
    <label>Receiver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>