force-app/main/default/objects/IFv2_RequestExtension1__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>EmployeeName__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Holds the email address of the Employee</inlineHelpText>
    <label>Email</label>
    <type>Text</type>
</CustomField>