force-app/main/default/objects/IFv2_RequestExtension1__c/fields/EmployeeDateofLeaving__c.field-meta.xml
<CustomField>
    <fullName>EmployeeDateofLeaving__c</fullName>
    <inlineHelpText>Select the Employee date of leaving.</inlineHelpText>
    <label>Employee Date of Leaving</label>
    <type>Date</type>
</CustomField>