force-app/main/default/objects/IFv2_RequestExtension1__c/fields/EmployeeJoinDate__c.field-meta.xml
<CustomField>
    <fullName>EmployeeJoinDate__c</fullName>
    <inlineHelpText>Select the Employee join date.</inlineHelpText>
    <label>Employee Join Date</label>
    <type>Date</type>
</CustomField>