force-app/main/default/objects/IFv2_RequestExtension1__c/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the user</description>
    <label>Employee Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Request_Extension_1_APAC</relationshipName>
    <type>Lookup</type>
</CustomField>