force-app/main/default/objects/IFv2_RequestExtension1__c/fields/EmployeeNoVendorName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNoVendorName__c</fullName>
    <label>Employee No. (Vendor Name)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>