force-app/main/default/objects/IFv2_RequestExtension1__c/fields/EmployeeType__c.field-meta.xml
<CustomField>
    <fullName>EmployeeType__c</fullName>
    <inlineHelpText>Please select the employee type.</inlineHelpText>
    <label>Employee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External / fixed-term</fullName>
            </value>
            <value>
                <fullName>M&amp;SS</fullName>
            </value>
            <value>
                <fullName>M&amp;SS Trainee</fullName>
            </value>
            <value>
                <fullName>Non M&amp;SS Trainee</fullName>
            </value>
            <value>
                <fullName>Workmen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>