force-app/main/default/objects/IFv2_RequestExtension1__c/fields/EndUserEvaluation__c.field-meta.xml
<CustomField>
    <fullName>EndUserEvaluation__c</fullName>
    <label>End User Evaluation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fulfill Design</fullName>
            </value>
            <value>
                <fullName>Unfulfill Design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>