force-app/main/default/objects/IFv2_RequestExtension1__c/fields/EstimatedTrainingFeeRMBperson__c.field-meta.xml
<CustomField>
    <fullName>EstimatedTrainingFeeRMBperson__c</fullName>
    <description>Used in China Training Application</description>
    <label>Estimated Training Fee(RMB/Person)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>