force-app/main/default/objects/IFv2_RequestExtension1__c/fields/EstimatedTravelFeeRMBPerson__c.field-meta.xml
<CustomField>
    <fullName>EstimatedTravelFeeRMBPerson__c</fullName>
    <description>Used in China Training Application</description>
    <label>Estimated Travel Fee (RMB/Person)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>