force-app/main/default/objects/IFv2_RequestExtension1__c/fields/EwayBillno__c.field-meta.xml
<CustomField>
    <fullName>EwayBillno__c</fullName>
    <label>Eway Bill no</label>
    <length>50</length>
    <type>Text</type>
</CustomField>