force-app/main/default/objects/IFv2_RequestExtension1__c/fields/FinalAcceptanceComment__c.field-meta.xml
<CustomField>
    <fullName>FinalAcceptanceComment__c</fullName>
    <label>Final Acceptance Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>