force-app/main/default/objects/IFv2_RequestExtension1__c/fields/FINDocumentNo__c.field-meta.xml
<CustomField>
    <fullName>FINDocumentNo__c</fullName>
    <description>Used in China MAE Application – Lost, Combine, Split and Scrap.</description>
    <inlineHelpText>This field should be filled by specific approvers from FIN department</inlineHelpText>
    <label>FIN Document No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>