force-app/main/default/objects/IFv2_RequestExtension1__c/fields/HidemyNameempno__c.field-meta.xml
<CustomField>
    <fullName>HidemyNameempno__c</fullName>
    <description>Used in Employee Suggestion Scheme</description>
    <inlineHelpText>Please enter, if you want your Name and Employee Number hidden during processing of your suggestion</inlineHelpText>
    <label>Hide my Name/emp.no</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>