force-app/main/default/objects/IFv2_RequestExtension1__c/fields/Ihavetriedmysuggestion__c.field-meta.xml
<CustomField>
    <fullName>Ihavetriedmysuggestion__c</fullName>
    <description>Used in Employee Suggestion Scheme</description>
    <inlineHelpText>Please enter, if you have already tried this suggestion</inlineHelpText>
    <label>I have tried my suggestion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>