force-app/main/default/objects/IFv2_RequestExtension1__c/fields/Iknowdepartmentsnameformysuggestion__c.field-meta.xml
<CustomField>
    <fullName>Iknowdepartmentsnameformysuggestion__c</fullName>
    <description>Used in Employee Suggestion Scheme</description>
    <inlineHelpText>Please enter, if you know the department name for routing of your suggestion</inlineHelpText>
    <label>I know department name for my suggestion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>