force-app/main/default/objects/IFv2_RequestExtension1__c/fields/InvoiceNoChapterID__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNoChapterID__c</fullName>
    <label>Invoice No/Chapter ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>