force-app/main/default/objects/IFv2_RequestExtension1__c/fields/IssueAssetLabel__c.field-meta.xml
<CustomField>
    <fullName>IssueAssetLabel__c</fullName>
    <label>Issue Asset Label</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>