force-app/main/default/objects/IFv2_RequestExtension1__c/fields/ItemType__c.field-meta.xml
<CustomField>
    <fullName>ItemType__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excisable</fullName>
            </value>
            <value>
                <fullName>Non-Excisable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>