force-app/main/default/objects/IFv2_RequestExtension1__c/fields/ITEquipment__c.field-meta.xml
<CustomField>
    <fullName>ITEquipment__c</fullName>
    <description>used in China MAE</description>
    <label>IT Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>