force-app/main/default/objects/IFv2_RequestExtension1__c/fields/Itrieditwithmyforemansupervisor__c.field-meta.xml
<CustomField>
    <fullName>Itrieditwithmyforemansupervisor__c</fullName>
    <description>Used in Employee Suggestion Scheme</description>
    <inlineHelpText>Please enter, if you already tried this suggestion</inlineHelpText>
    <label>I tried it with my foreman/supervisor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>