force-app/main/default/objects/IFv2_RequestExtension1__c/fields/LandAreaOccupied__c.field-meta.xml
<CustomField>
    <fullName>LandAreaOccupied__c</fullName>
    <label>Land Area Occupied</label>
    <length>250</length>
    <type>Text</type>
</CustomField>