force-app/main/default/objects/IFv2_RequestExtension1__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Changchun(Cc)</fullName>
            </value>
            <value>
                <fullName>Changsha(Cs)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>