force-app/main/default/objects/IFv2_RequestExtension1__c/fields/LostDate__c.field-meta.xml
<CustomField>
    <fullName>LostDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Used in China MAE Application – Lost</description>
    <label>Lost Date</label>
    <type>Date</type>
</CustomField>