force-app/main/default/objects/IFv2_RequestExtension1__c/fields/MachineNo__c.field-meta.xml
<CustomField>
    <fullName>MachineNo__c</fullName>
    <label>Machine No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>