force-app/main/default/objects/IFv2_RequestExtension1__c/fields/MAEType__c.field-meta.xml
<CustomField>
    <fullName>MAEType__c</fullName>
    <label>MAE Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Serially MAE</fullName>
            </value>
            <value>
                <fullName>Special MAE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>