force-app/main/default/objects/IFv2_RequestExtension1__c/fields/ManufacturingProduct__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingProduct__c</fullName>
    <description>Used in China MAE Application – Lost</description>
    <label>Manufacturing Product</label>
    <length>250</length>
    <type>Text</type>
</CustomField>