force-app/main/default/objects/IFv2_RequestExtension1__c/fields/ModeOfTransport__c.field-meta.xml
<CustomField>
    <fullName>ModeOfTransport__c</fullName>
    <label>Mode Of Transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Our transport</fullName>
            </value>
            <value>
                <fullName>By air</fullName>
            </value>
            <value>
                <fullName>By courier</fullName>
            </value>
            <value>
                <fullName>By hand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>