force-app/main/default/objects/IFv2_RequestExtension1__c/fields/NeedCustomerConfirm__c.field-meta.xml
<CustomField>
    <fullName>NeedCustomerConfirm__c</fullName>
    <description>used in china Capitalize workflow</description>
    <label>Need Customer Confirm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>