force-app/main/default/objects/IFv2_RequestExtension1__c/fields/NewAssetNumber__c.field-meta.xml
<CustomField>
    <fullName>NewAssetNumber__c</fullName>
    <label>New Asset Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>