force-app/main/default/objects/IFv2_RequestExtension1__c/fields/NoofPackages__c.field-meta.xml
<CustomField>
    <fullName>NoofPackages__c</fullName>
    <label>No of Packages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>