force-app/main/default/objects/IFv2_RequestExtension1__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <formula>&quot;Please process this suggestion / in case of non-quantifiable benefits attach filled questionnaire / in case of quantifiable benefits assign this work on to CFA/CTG with data / in case you want to reject this suggestion assign it back to me, with reason for rejection&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note</label>
    <type>Text</type>
</CustomField>