force-app/main/default/objects/IFv2_RequestExtension1__c/fields/NTID__c.field-meta.xml
<CustomField>
    <fullName>NTID__c</fullName>
    <formula>EmployeeName__r.NT_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Holds the NT ID of the Employee</inlineHelpText>
    <label>NT ID</label>
    <type>Text</type>
</CustomField>