force-app/main/default/objects/IFv2_RequestExtension1__c/fields/OperationNo__c.field-meta.xml
<CustomField>
    <fullName>OperationNo__c</fullName>
    <label>Operation No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>