force-app/main/default/objects/IFv2_RequestExtension1__c/fields/PayorNot__c.field-meta.xml
<CustomField>
    <fullName>PayorNot__c</fullName>
    <description>Used in China MAE Application – Lost</description>
    <label>Pay or Not</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>