force-app/main/default/objects/IFv2_RequestExtension1__c/fields/PersonnelID__c.field-meta.xml
<CustomField>
    <fullName>PersonnelID__c</fullName>
    <description>Used in China MAE Application – Lost</description>
    <label>Personnel ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>