force-app/main/default/objects/IFv2_RequestExtension1__c/fields/PhysicalCheck__c.field-meta.xml
<CustomField>
    <fullName>PhysicalCheck__c</fullName>
    <description>Used in China MAE Application - Scrap.</description>
    <inlineHelpText>This field should be filled by specific Approvers</inlineHelpText>
    <label>Physical Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>