force-app/main/default/objects/IFv2_RequestExtension1__c/fields/PhysicalLocationbeforeLost__c.field-meta.xml
<CustomField>
    <fullName>PhysicalLocationbeforeLost__c</fullName>
    <description>Used in China MAE Application – Lost</description>
    <label>Physical Location before Lost</label>
    <length>250</length>
    <type>Text</type>
</CustomField>