force-app/main/default/objects/IFv2_RequestExtension1__c/fields/PlannedEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlannedEndDateTime__c</fullName>
    <description>Used in China Applications</description>
    <label>Planned End Date/Time</label>
    <type>DateTime</type>
</CustomField>