force-app/main/default/objects/IFv2_RequestExtension1__c/fields/PlannedStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlannedStartDateTime__c</fullName>
    <description>Used in China Travel Application</description>
    <label>Planned Start Date / Time</label>
    <type>DateTime</type>
</CustomField>