force-app/main/default/objects/IFv2_RequestExtension1__c/fields/PMNo__c.field-meta.xml
<CustomField>
    <fullName>PMNo__c</fullName>
    <label>PM No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>