force-app/main/default/objects/IFv2_RequestExtension1__c/fields/PONo__c.field-meta.xml
<CustomField>
    <fullName>PONo__c</fullName>
    <label>PO No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>