force-app/main/default/objects/IFv2_RequestExtension1__c/fields/POrefSuppliersDCNo__c.field-meta.xml
<CustomField>
    <fullName>POrefSuppliersDCNo__c</fullName>
    <label>PO ref / Supplier&apos;s DC No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>