force-app/main/default/objects/IFv2_RequestExtension1__c/fields/PresentMethod__c.field-meta.xml
<CustomField>
    <fullName>PresentMethod__c</fullName>
    <label>Present Method</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>