force-app/main/default/objects/IFv2_RequestExtension1__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Used in China MAE Application - Scrap</description>
    <inlineHelpText>This field should be filled by specific Approvers</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>