force-app/main/default/objects/IFv2_RequestExtension1__c/fields/PrimarySuggester__c.field-meta.xml
<CustomField>
    <fullName>PrimarySuggester__c</fullName>
    <description>Used in Employee Suggestion Scheme</description>
    <inlineHelpText>Please enter the name of the primary suggester</inlineHelpText>
    <label>Primary Suggester</label>
    <length>255</length>
    <type>Text</type>
</CustomField>