force-app/main/default/objects/IFv2_RequestExtension1__c/fields/PrimarySuggesterDepartment__c.field-meta.xml
<CustomField>
    <fullName>PrimarySuggesterDepartment__c</fullName>
    <description>Used in Employee Suggestion Scheme</description>
    <inlineHelpText>Please enter the department of the primary suggester</inlineHelpText>
    <label>Primary Suggester Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>