force-app/main/default/objects/IFv2_RequestExtension1__c/fields/PrimarySuggesterEmpNo__c.field-meta.xml
<CustomField>
    <fullName>PrimarySuggesterEmpNo__c</fullName>
    <description>Used in Employee Suggestion Scheme</description>
    <inlineHelpText>Please enter the employee number of the primary suggester</inlineHelpText>
    <label>Primary Suggester EmpNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>