force-app/main/default/objects/IFv2_RequestExtension1__c/fields/ProjectArea__c.field-meta.xml
<CustomField>
    <fullName>ProjectArea__c</fullName>
    <label>Project Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>