force-app/main/default/objects/IFv2_RequestExtension1__c/fields/ProjectInvolving__c.field-meta.xml
<CustomField>
    <fullName>ProjectInvolving__c</fullName>
    <label>Project Involving</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Ventilation</fullName>
            </value>
            <value>
                <fullName>Compressed Air</fullName>
            </value>
            <value>
                <fullName>Fire Protection</fullName>
            </value>
            <value>
                <fullName>Special Equipment</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Steel Structure Safety</fullName>
            </value>
            <value>
                <fullName>Renovation</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>