force-app/main/default/objects/IFv2_RequestExtension1__c/fields/ProjectScope__c.field-meta.xml
<CustomField>
    <fullName>ProjectScope__c</fullName>
    <label>Project Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>