force-app/main/default/objects/IFv2_RequestExtension1__c/fields/ProposedMethod__c.field-meta.xml
<CustomField>
    <fullName>ProposedMethod__c</fullName>
    <label>Proposed Method</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>